# Trits

./: .gitignore  CMakeLists.txt  main.cpp  tests.cpp  trit.cpp  trit.h  tritset.cpp  tritset.h
